set 301 redirections vers www.classicetsportautos.fr
git-svn-id: https://classicetsportautos.googlecode.com/svn/trunk@71 27e19835-539d-85bd-6db8-362e94f4f2e1

--- a/ classicetsportautos --username classicetsportautos@gmail.com/.htaccess
+++ b/ classicetsportautos --username classicetsportautos@gmail.com/.htaccess
@@ -1,1 +1,6 @@
 AddType x-mapp-php5 .php .php3 .php4 .htm .html
+
+Options +FollowSymLinks
+RewriteEngine on
+RewriteCond %{HTTP_HOST} !www.classicetsportautos.fr$
+RewriteRule (.*) http://www.classicetsportautos.fr/$1 [R=301,L]
